--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 // do not ignore pbo in master
 .vscode/
+
+\[J\]OPT-alt\.lythium/
+
+\[J\]OPT-alt\.lythium/
+
+\[J\]OPT-alt\.lythium/
+
+\[J\]OPT-alt\.lythium/
